# tap-gorgias

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tap_gorgias/: __init__.py  client.py  streams.py  sync.py
tap_gorgias/schemas/: events.json  messages.json  satisfaction_surveys.json  tickets.json  voice_call_events.json  voice_call_recordings.json  voice_calls.json
