[tool.poetry]
name = "tap-gorgias"
version = "0.1.4"
description = "`tap-gorgias` is a Singer tap for Gorgias."
authors = ["k3llymariee"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-gorgias = 'tap_gorgias:main'
